--- a/Jane/commander-spellbook-backend-master/.env
+++ b/Jane/commander-spellbook-backend-master/.env
@@ -1,12 +1,19 @@
 PYTHONPATH=common/
-# Django secret key (use something long & random in production)
-SECRET_KEY=securestringhere 
+# Django secret key - SECURITY: Load from secrets file
+SECRET_KEY_FILE=/run/secrets/django_secret_key
 
-# Database connection (Postgres you spun up in Compose)
-DATABASE_URL=postgres://spellbook_user:your_password_here@spellbook-db:5432/spellbook_db
+# Database connection - SECURITY: Load password from secrets
+DATABASE_URL=postgres://spellbook_user@spellbook-db:5432/spellbook_db
 
-# Disable debug in production
+# Security settings
 DEBUG=False
+ALLOWED_HOSTS=localhost,127.0.0.1,192.168.1.17
 
-# Which hosts are allowed to serve this site
-ALLOWED_HOSTS=localhost,127.0.0.1
+# Security headers
+SECURE_SSL_REDIRECT=False
+SECURE_HSTS_SECONDS=31536000
+SECURE_HSTS_INCLUDE_SUBDOMAINS=True
+SECURE_HSTS_PRELOAD=True
+SECURE_CONTENT_TYPE_NOSNIFF=True
+SECURE_BROWSER_XSS_FILTER=True
+X_FRAME_OPTIONS=DENY
