--- a/Jane/commander-spellbook-site-main/.env.production
+++ b/Jane/commander-spellbook-site-main/.env.production
@@ -1,8 +1,8 @@
 # tell Next.js where its own UI lives:
-NEXT_PUBLIC_CLIENT_URL=http://localhost:3001
+NEXT_PUBLIC_CLIENT_URL=http://192.168.1.17:3001
 
 # tell Next.js where to send all API calls:
-NEXT_PUBLIC_EDITOR_BACKEND_URL=http://localhost:8000
+NEXT_PUBLIC_EDITOR_BACKEND_URL=http://192.168.1.17:8000
 
-# Motoko LLM server endpoint
-NEXT_PUBLIC_LLM_SERVER_URL=http://motoko:8000
+# Motoko LLM server endpoint (separate server at IP 192.168.1.12)
+NEXT_PUBLIC_LLM_SERVER_URL=http://192.168.1.12:8000
