--- a/.env.template
+++ b/.env.template
@@ -11,6 +11,13 @@ REDIS_PASSWORD=CHANGE_ME_REDIS_PASSWORD_HERE
 # LLM Configuration
 LLM_API_KEY=CHANGE_ME_LLM_API_KEY_HERE
 
+# Authentication
+JWT_SECRET_KEY=CHANGE_ME_JWT_SECRET_HERE
+ADMIN_PASSWORD=CHANGE_ME_ADMIN_PASSWORD_HERE
+
+# Monitoring
+GRAFANA_PASSWORD=CHANGE_ME_GRAFANA_PASSWORD_HERE
+
 # Environment
 ENVIRONMENT=production
 
@@ -23,3 +30,11 @@ OLLAMA_QUANTIZATION=fp16
 # N8N Configuration
 N8N_ENCRYPTION_KEY=CHANGE_ME_N8N_ENCRYPTION_KEY_HERE
 N8N_USER_MANAGEMENT_JWT_SECRET=CHANGE_ME_JWT_SECRET_HERE
+
+# Network Configuration
+JANE_IP=192.168.1.17
+MOTOKO_IP=192.168.1.12
+
+# Vault Configuration (optional)
+VAULT_URL=http://vault:8200
+VAULT_TOKEN=dev-token-change-me
